@@ -1,3 +1,8 @@
+2001-11-12  Kevin Vandersloot <kfv101@psu.edu>
+
+	* proctable.c: fix bug correctly with respect to child
+	processes and whether or not a process is a thread
+
 2001-11-11  Kevin Vandersloot <kfv101@psu.edu>
 
 	* proctable.c: get " view active processes" working. Also
